samples/_failures_safe/1761365558_03415e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cbd8c4c.c: In function ‘main’:
./samples/SAFE/__tmp_9cbd8c4c.c:177:12: error: missing terminating " character
  177 |     printf("File Compression Tool
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9cbd8c4c.c:177:5: error: expected expression at end of input
  177 |     printf("File Compression Tool
      |     ^~~~~~
./samples/SAFE/__tmp_9cbd8c4c.c:177:5: error: expected declaration or statement at end of input
